--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,38 +14,41 @@
         }
 
         .login-form {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 300px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 30px; /* tăng padding */
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 400px; /* tăng độ rộng */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
 
         .login-form label {
             font-weight: bold;
+            font-size: 1.2em; /* tăng kích thước chữ */
         }
 
         .login-form input[type="email"],
         .login-form input[type="password"] {
-            margin-bottom: 15px;
-            padding: 10px;
+            margin-bottom: 20px; /* tăng khoảng cách */
+            padding: 15px; /* tăng padding */
             border: 1px solid #dddddd;
             border-radius: 5px;
+            font-size: 1.2em; /* tăng kích thước chữ */
         }
 
         .login-form input[type="submit"] {
             background-color: #535b63;
             color: #ffffff;
-            padding: 10px;
+            padding: 15px; /* tăng padding */
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 1.2em; /* tăng kích thước chữ */
         }
     </style>
 </head>
