--- a/views/Size/list.ejs
+++ b/views/Size/list.ejs
@@ -3,27 +3,19 @@
 <h1 class="alert alert-info">Danh sách Size</h1>
 <%= msg %>
 
-<% if(typeof(size) != 'undefined' && size.length > 0) { %>
+<% if(typeof(sizes) != 'undefined' && sizes.length > 0) { %>
     <table class="table table-bordered">
         <tr>
             <th>Size Code</th>
             <th>Color</th>
             <th>Quantity</th>
-            <th>Sửa</th>
-            <th>Xóa</th>
         </tr>
 
-        <% size.forEach((row) => { %>
+        <% sizes.forEach((row) => { %>
         <tr>
             <td><%= row.sizeCode %></td>
             <td><%= row.color %></td>
             <td><%= row.quantity %></td>
-            <td>
-                <a href="/sizes/edit/<%= row._id  %>"> Sửa </a>
-            </td>
-            <td>
-                <a href="/sizes/delete/<%= row._id  %>">Xóa</a>
-            </td>
         </tr>
         <% }) %>
     </table>
