--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -47,14 +47,20 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Thống Kê</a>
                   </li>
-              <a class="nav-link" href="/users">Quản lý người dùng</a>
+              <a class="nav-link" href="/users/list">Quản lý người dùng</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/sizes">Quản lý Size</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/">Quản lý Màu Sắc</a>
-              </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-haspopup="true" aria-expanded="false">
+                Quản lý Màu Sắc
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/colorCodes">Quản lý Mã Màu</a>
+                <a class="dropdown-item" href="/colors">Quản lý Màu</a>
+              </div>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Quản lý Sản Phẩm</a>
               </li>
