--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -62,6 +62,9 @@
           <a class="nav-link" href="/colorCode">Quản lý Mã Màu</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/productType">Quản lý Loại Sản Phẩm</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/product">Quản lý Sản Phẩm</a>
         </li>
         <!-- Thêm các liên kết khác tại đây -->
