--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -52,7 +52,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
         <li class="nav-item">
-          <a class="nav-link" href="/">Thống Kê</a>
+          <a class="nav-link" href="/statistics">Thống Kê</a>
         </li>
         <a class="nav-link" href="/users/list">Quản lý người dùng</a>
         </li>
