--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -1,18 +1,22 @@
 <%- include ('../inc/header') %>
+
 <h2 style="margin-left: 20px">Tổng Doanh thu</h2>
 <div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
     <canvas id="totalRevenueChart"></canvas>
 </div>
-<h2 style="margin-left: 20px">Doanh Theo Loại Sản Phẩm</h2>
+
+<h2 style="margin-left: 20px">Doanh Thu Theo Loại Sản Phẩm</h2>
 <div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
     <canvas id="productTypeRevenueChart"></canvas>
 </div>
+
 <h2 style="margin-left: 20px">Top 5 Sản phẩm Bán chạy</h2>
 <ul id="topSellingProductsList"></ul>
 
 <script>
     var productTypeRevenueData = JSON.parse('<%- JSON.stringify(productTypeRevenue) %>');
     var topSellingProductsData = JSON.parse('<%- JSON.stringify(topSellingProducts) %>');
+    var totalRevenueData = JSON.parse('<%- JSON.stringify(totalRevenue) %>');
 
     var ctx = document.getElementById('productTypeRevenueChart').getContext('2d');
     var productTypeRevenueChart = new Chart(ctx, {
@@ -40,14 +44,14 @@
 
     var ctx = document.getElementById('totalRevenueChart').getContext('2d');
     var totalRevenueChart = new Chart(ctx, {
-        type: 'bar', // change from 'line' to 'bar'
+        type: 'bar',
         data: {
-            labels: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'], // labels for 12 months
+            labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', 'Tháng 7', 'Tháng 8', 'Tháng 9', 'Tháng 10', 'Tháng 11', 'Tháng 12'],
             datasets: [{
                 label: 'Tổng Doanh Thu',
-                data: ['<%= totalRevenue %>'], // replace with your data
-                backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                borderColor: 'rgba(255, 99, 132, 1)',
+                data: totalRevenueData,
+                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                borderColor: 'rgba(75, 192, 192, 1)',
                 borderWidth: 1
             }]
         },
