--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GENTALWEAR</title> 
+  <link rel="icon" href="logo.jpg" type="image/x-icon"> 
   <link rel="stylesheet" href="/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
