--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GENTALWEAR</title> 
-  <link rel="icon" href="logo.jpg" type="image/x-icon"> 
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/1093418895412576326/1212408711570788382/z5071407403811_6293090e7f74f549476cd87ea399d299.jpg?ex=65f1ba9a&is=65df459a&hm=eac1a8fa9ab1291e872d5ba69c313377151af9a4f5b61dfd44505fdc571d9081&" type="image/x-icon"> 
   <link rel="stylesheet" href="/bootstrap-5.3.0-dist/css/bootstrap.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
