--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -31,6 +31,16 @@
       position: absolute;
       right: 0;
     }
+    .aside-container  {
+      width: 30%;
+    }
+    .article-container {
+      width: 60%;
+    }
+    .main-container {
+      display: flex;
+      justify-content: space-between;
+    }
   </style>
 </head>
 
