--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -78,7 +78,7 @@
           <a class="nav-link" href="/productType">Quản lý Loại Sản Phẩm</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/product">Quản lý Sản Phẩm</a>
+          <a class="nav-link" href="/products">Quản lý Sản Phẩm</a>
         </li>
         <!-- Thêm các liên kết khác tại đây -->
       </ul>
