--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -1,56 +1,237 @@
-<!-- views/productType/productTypeList.ejs -->
 <%- include ('../inc/header') %>
-<main class="main-container">
-    <aside class="aside-container" >
-        <div class="accordion" id="accordionPanelsStayOpenExample">
-            <div class="accordion-item">
+  <div>
+    <div style="display: flex;" class="alert alert-info">
+      <div style="display: flex;">
+        <h2>Sản phẩm</h2>
+        <form style="margin-left: 150px;width: 500px;">
+          <div class="navbar-form navbar-right">
+            <input type="key" class="form-control" placeholder="Tìm kiếm" name="key">
+          </div>
+        </form>
+        <a href="/addprouct" class="btn btn-primary" style="margin-left: 520px; height: 40px;">Thêm</a>
+      </div>
+    </div>
+
+    <div style="display: flex;" class="grid gap-0 column-gap-3">
+      <div style="margin-right: 10dp; flex-basis: 20%;">
+        <aside class="aside">
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item" style="border-radius: 10%;">
               <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                  aria-controls="panelsStayOpen-collapseOne" style="background-color: #cff4fc;">
                   Loại sản phẩm
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                <ul>
-                    <li>a</li>
-                    <li>a</li>
-                    <li>a</li>
-                </ul>
+                <div style="margin-left: 20px;">
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Tất cả</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="sp">
+                    <label>Áo phông</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="sp">
+                    <label>Áo sơ mi</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="sp">
+                    <label>Áo khoác</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="sp">
+                    <label>Màu vest</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="sp">
+                    <label>Màu hoodie</label>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="accordion-item">
+            <div class="accordion-item" style="margin-top: 30px;border-radius: 10%;">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Accordion Item #2
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseTwo" style="background-color: #cff4fc;">
+                  Màu
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show">
-                <ul>
-                    <li>a</li>
-                    <li>a</li>
-                    <li>a</li>
-                </ul>
+                <div style="margin-left: 20px;">
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Tất cả</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Màu đỏ</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Màu vàng</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Màu xanh</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Màu trắng</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="mau">
+                    <label>Màu đen</label>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="accordion-item">
+            <div class="accordion-item" style="margin-top: 30px;border-radius: 10%;">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Accordion Item #3
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                  aria-controls="panelsStayOpen-collapseThree" style="background-color: #cff4fc;">
+                  Kích cỡ
                 </button>
               </h2>
               <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show">
-                <ul>
-                    <li>a</li>
-                    <li>a</li>
-                    <li>a</li>
-                </ul>
+                <div style="margin-left: 20px;">
+                  <div>
+                    <input type="radio" name="co">
+                    <label>Tất cả</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="co">
+                    <label>S</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="co">
+                    <label>M</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="co">
+                    <label>L</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="co">
+                    <label>XL</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="co">
+                    <label>XXL</label>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-    </aside>
-    <article class="article-container">
-        <h1>aaaaaaaaaa</h1>
-    </article>
+        </aside>
+      </div>
 
+      <div style="flex-basis: 80%;">
+        <table class="table table-striped table-sm" style="flex-basis: 80%;">
+          <thead>
+            <tr class="table-dark">
+              <th width="500">Hình ảnh</th>
+              <th width="500">Tên sản phẩm</th>
+              <th>Giá</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="accordion-toggle">
+              <td><img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg" alt=""
+                  class="img-thumbnail img-sm" style="height: 80px;max-width: 80%;"></td>
+              <td>Áo sơ mi tay ngắn</td>
+              <td>100.000đ</td>
+            </tr>
+            <tr class="accordion-body" style="display: none;">
+              <td colspan="4">
+                <div style="display: flex;background-color: #cff4fc;border-radius: 10px;">
+                  <div style="padding: 20px;">
+                    <img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg"
+                      class="img-thumbnail img-sm" style="height: 250px;max-width: 80%;">
+                  </div>
+                  <div>
+                    <div>
+                      <div style="max-width: 300px"><b>Tên sản phẩm: </b></div>
+                      <label>Áo sơ mi tay ngắn</label>
+                      <div style="max-width: 300px"><b>Giá: </b></div>
+                      <label>100.000đ</label>
+                      <div style="max-width: 300px"><b>Màu: </b></div>
+                      <label>Xanh, vàng, trắng</label>
+                      <div style="max-width: 300px"><b>Kích cỡ: </b></div>
+                      <label>M, L, XL, XXL</label>
+                      <div style="max-width: 300px"><b>Mô tả: </b></div>
+                      <label>Đây là một chiếc áo sơ mi thoải mái được làm từ cotton</label>
+                      <div style="max-width: 300px"><b>Tình trạng: </b></div>
+                      <label>Còn hàng</label>
+                      <div style="margin-top: 20px;">
+                        <a href="" class="btn btn-info">Cập nhật</a>
+                        <a href="" class="btn btn-danger" style="margin-left: 20px;">Ngưng bán</a>
+                      </div>
 
-</main>
-<%- include ('../inc/footer') %>
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr class="accordion-toggle">
+              <td><img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg" alt=""
+                  class="img-thumbnail img-sm" style="height: 80px;max-width: 80%;"></td>
+              <td>Áo sơ mi tay ngắn</td>
+              <td>100.000đ</td>
+            </tr>
+            <tr class="accordion-body" style="display: none;">
+              <td colspan="4">
+                <div style="display: flex;background-color: #cff4fc;border-radius: 10px;">
+                  <div style="padding: 20px;">
+                    <img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg"
+                      class="img-thumbnail img-sm" style="height: 250px;max-width: 80%;">
+                  </div>
+                  <div>
+                    <div>
+                      <div style="max-width: 300px"><b>Tên sản phẩm: </b></div>
+                      <label>Áo sơ mi tay ngắn</label>
+                      <div style="max-width: 300px"><b>Giá: </b></div>
+                      <label>100.000đ</label>
+                      <div style="max-width: 300px"><b>Màu: </b></div>
+                      <label>Xanh, vàng, trắng</label>
+                      <div style="max-width: 300px"><b>Kích cỡ: </b></div>
+                      <label>M, L, XL, XXL</label>
+                      <div style="max-width: 300px"><b>Mô tả: </b></div>
+                      <label>Đây là một chiếc áo sơ mi thoải mái được làm từ cotton</label>
+                      <div style="max-width: 300px"><b>Tình trạng: </b></div>
+                      <label>Còn hàng</label>
+                      <div style="margin-top: 20px;">
+                        <a href="" class="btn btn-info">Cập nhật</a>
+                        <a href="" class="btn btn-danger" style="margin-left: 20px;">Ngưng bán</a>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+      </div>
+    </div>
+  </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const accordionItems = document.querySelectorAll('.accordion-toggle');
+      accordionItems.forEach(function (item) {
+        item.addEventListener('click', function () {
+          const nextElement = this.nextElementSibling;
+          if (nextElement.style.display === 'none') {
+            nextElement.style.display = 'table-row';
+          } else {
+            nextElement.style.display = 'none';
+          }
+        });
+      });
+    });
+  </script>
+  <%- include ('../inc/footer') %>
