--- a/views/product/productPage.ejs
+++ b/views/product/productPage.ejs
@@ -8,7 +8,7 @@
             <input type="key" class="form-control" placeholder="Tìm kiếm" name="key">
           </div>
         </form>
-        <a href="/addprouct" class="btn btn-primary" style="margin-left: 520px; height: 40px;">Thêm</a>
+        <a href="/products/add" class="btn btn-primary" style="margin-left: 520px; height: 40px;">Thêm</a>
       </div>
     </div>
 
@@ -30,26 +30,6 @@
                     <input type="radio" name="mau">
                     <label>Tất cả</label>
                   </div>
-                  <div>
-                    <input type="radio" name="sp">
-                    <label>Áo phông</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="sp">
-                    <label>Áo sơ mi</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="sp">
-                    <label>Áo khoác</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="sp">
-                    <label>Màu vest</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="sp">
-                    <label>Màu hoodie</label>
-                  </div>
                 </div>
               </div>
             </div>
@@ -66,26 +46,6 @@
                   <div>
                     <input type="radio" name="mau">
                     <label>Tất cả</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="mau">
-                    <label>Màu đỏ</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="mau">
-                    <label>Màu vàng</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="mau">
-                    <label>Màu xanh</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="mau">
-                    <label>Màu trắng</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="mau">
-                    <label>Màu đen</label>
                   </div>
                 </div>
               </div>
@@ -104,26 +64,6 @@
                     <input type="radio" name="co">
                     <label>Tất cả</label>
                   </div>
-                  <div>
-                    <input type="radio" name="co">
-                    <label>S</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="co">
-                    <label>M</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="co">
-                    <label>L</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="co">
-                    <label>XL</label>
-                  </div>
-                  <div>
-                    <input type="radio" name="co">
-                    <label>XXL</label>
-                  </div>
                 </div>
               </div>
             </div>
@@ -140,82 +80,6 @@
               <th>Giá</th>
             </tr>
           </thead>
-          <tbody>
-            <tr class="accordion-toggle">
-              <td><img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg" alt=""
-                  class="img-thumbnail img-sm" style="height: 80px;max-width: 80%;"></td>
-              <td>Áo sơ mi tay ngắn</td>
-              <td>100.000đ</td>
-            </tr>
-            <tr class="accordion-body" style="display: none;">
-              <td colspan="4">
-                <div style="display: flex;background-color: #cff4fc;border-radius: 10px;">
-                  <div style="padding: 20px;">
-                    <img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg"
-                      class="img-thumbnail img-sm" style="height: 250px;max-width: 80%;">
-                  </div>
-                  <div>
-                    <div>
-                      <div style="max-width: 300px"><b>Tên sản phẩm: </b></div>
-                      <label>Áo sơ mi tay ngắn</label>
-                      <div style="max-width: 300px"><b>Giá: </b></div>
-                      <label>100.000đ</label>
-                      <div style="max-width: 300px"><b>Màu: </b></div>
-                      <label>Xanh, vàng, trắng</label>
-                      <div style="max-width: 300px"><b>Kích cỡ: </b></div>
-                      <label>M, L, XL, XXL</label>
-                      <div style="max-width: 300px"><b>Mô tả: </b></div>
-                      <label>Đây là một chiếc áo sơ mi thoải mái được làm từ cotton</label>
-                      <div style="max-width: 300px"><b>Tình trạng: </b></div>
-                      <label>Còn hàng</label>
-                      <div style="margin-top: 20px;">
-                        <a href="" class="btn btn-info">Cập nhật</a>
-                        <a href="" class="btn btn-danger" style="margin-left: 20px;">Ngưng bán</a>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <tr class="accordion-toggle">
-              <td><img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg" alt=""
-                  class="img-thumbnail img-sm" style="height: 80px;max-width: 80%;"></td>
-              <td>Áo sơ mi tay ngắn</td>
-              <td>100.000đ</td>
-            </tr>
-            <tr class="accordion-body" style="display: none;">
-              <td colspan="4">
-                <div style="display: flex;background-color: #cff4fc;border-radius: 10px;">
-                  <div style="padding: 20px;">
-                    <img src="https://oldsailor.com.vn/vnt_upload/product/04_2022/2988927b970c56520f1d31.jpg"
-                      class="img-thumbnail img-sm" style="height: 250px;max-width: 80%;">
-                  </div>
-                  <div>
-                    <div>
-                      <div style="max-width: 300px"><b>Tên sản phẩm: </b></div>
-                      <label>Áo sơ mi tay ngắn</label>
-                      <div style="max-width: 300px"><b>Giá: </b></div>
-                      <label>100.000đ</label>
-                      <div style="max-width: 300px"><b>Màu: </b></div>
-                      <label>Xanh, vàng, trắng</label>
-                      <div style="max-width: 300px"><b>Kích cỡ: </b></div>
-                      <label>M, L, XL, XXL</label>
-                      <div style="max-width: 300px"><b>Mô tả: </b></div>
-                      <label>Đây là một chiếc áo sơ mi thoải mái được làm từ cotton</label>
-                      <div style="max-width: 300px"><b>Tình trạng: </b></div>
-                      <label>Còn hàng</label>
-                      <div style="margin-top: 20px;">
-                        <a href="" class="btn btn-info">Cập nhật</a>
-                        <a href="" class="btn btn-danger" style="margin-left: 20px;">Ngưng bán</a>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </tbody>
       </div>
     </div>
   </div>
