--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -1,17 +1,33 @@
 <%- include ('../inc/header') %>
 
-<h2 style="margin-left: 20px">Tổng Doanh thu</h2>
-<div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
-    <canvas id="totalRevenueChart"></canvas>
+<div style="display: flex; justify-content: space-around; align-items: center; margin-top: -220px;">
+    <div>
+        <div style="width: 1000px; height: 1000px; display: flex; justify-content: center; align-items: center;">
+            <canvas id="totalRevenueChart"></canvas>
+        </div>
+    </div>
+
+    <div>
+        <div style="width: 1000px; height: 1000px; display: flex; justify-content: center; align-items: center;">
+            <canvas id="productTypeRevenueChart"></canvas>
+        </div>
+    </div>
 </div>
 
-<h2 style="margin-left: 20px">Doanh Thu Theo Loại Sản Phẩm</h2>
-<div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
-    <canvas id="productTypeRevenueChart"></canvas>
+<h2 style="margin-left: 20px; margin-top: -150px;">Top 5 Sản phẩm Bán chạy</h2>
+<div style="display: flex;" class="grid gap-0 column-gap-3">
+    <div style="flex-basis: 100%; margin-left: 0%;">
+    <table class="table table-striped table-sm" style="flex-basis: 80%;">
+      <thead>
+        <tr class="table-dark">
+          <th>Tên sản phẩm</th>
+          <th>Số lượng đã bán</th>
+        </tr>
+      </thead>
+      <tbody id="topSellingProductsList"></tbody>
+    </table>
+  </div>
 </div>
-
-<h2 style="margin-left: 20px">Top 5 Sản phẩm Bán chạy</h2>
-<ul id="topSellingProductsList"></ul>
 
 <script>
     var productTypeRevenueData = JSON.parse('<%- JSON.stringify(productTypeRevenue) %>');
@@ -66,9 +82,14 @@
 
     var topSellingProductsList = document.getElementById('topSellingProductsList');
     for (let product of topSellingProductsData) {
-        var li = document.createElement("li");
-        li.appendChild(document.createTextNode(product.productName + ": " + product.quantitySold));
-        topSellingProductsList.appendChild(li);
+        var tr = document.createElement("tr");
+        var tdName = document.createElement("td");
+        tdName.appendChild(document.createTextNode(product.productName));
+        var tdQuantity = document.createElement("td");
+        tdQuantity.appendChild(document.createTextNode(product.quantitySold));
+        tr.appendChild(tdName);
+        tr.appendChild(tdQuantity);
+        topSellingProductsList.appendChild(tr);
     }
 </script>
 
