--- a/views/users/purchase-history.ejs
+++ b/views/users/purchase-history.ejs
@@ -1,15 +1,31 @@
 <%- include('../inc/header.ejs') %>
-<h2>Lịch sử mua hàng</h2>
-<ul>
-    <% transactions.forEach(transaction => { %>
-        <li>
-            <h3>Đơn hàng <%= transaction._id %></h3>
-            <ul>
-                <% transaction.cart.forEach(item => { %>
-                    <li><%= item.products.productName %> - <%= item.soLuong %> cái</li>
-                <% }) %>
-            </ul>
-        </li>
-    <% }) %>
-</ul>
+
+<div style="display: flex;" class="alert alert-info">
+    <div style="display: flex;">
+      <h2>Lịch Sử Mua Hàng Của</h2>
+    </div>
+  </div>
+<div style="display: flex;" class="grid gap-0 column-gap-3">
+  <div style="flex-basis: 100%; margin-left: 0%;">
+    <table class="table table-striped table-sm" style="flex-basis: 80%;">
+      <thead>
+        <tr class="table-dark">
+          <th>Tên sản phẩm</th>
+          <th>Số lượng</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% transactions.forEach(transaction => { %>
+          <% transaction.cart.forEach(item => { %>
+            <tr>
+              <td><%= item.products.productName %></td>
+              <td><%= item.soLuong %></td>
+            </tr>
+          <% }) %>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
 <%- include('../inc/footer.ejs') %>
