--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -20,7 +20,9 @@
     <table class="table table-striped table-sm" style="flex-basis: 80%;">
       <thead>
         <tr class="table-dark">
+            <th>Ảnh sản phẩm</th>
           <th>Tên sản phẩm</th>
+          <th>Giá sản phẩm</th>
           <th>Số lượng đã bán</th>
         </tr>
       </thead>
@@ -87,8 +89,19 @@
         tdName.appendChild(document.createTextNode(product.productName));
         var tdQuantity = document.createElement("td");
         tdQuantity.appendChild(document.createTextNode(product.quantitySold));
+        var tdImage = document.createElement("td"); 
+        var img = document.createElement("img");
+        img.src = product.image; 
+        img.style.width = "100px"; 
+        img.style.height = "100px"; 
+        tdImage.appendChild(img);
+        var tdPrice = document.createElement("td"); 
+        tdPrice.appendChild(document.createTextNode(product.price)); 
+        tr.appendChild(tdImage); 
         tr.appendChild(tdName);
+        tr.appendChild(tdPrice);
         tr.appendChild(tdQuantity);
+
         topSellingProductsList.appendChild(tr);
     }
 </script>
