--- a/views/users/purchase-history.ejs
+++ b/views/users/purchase-history.ejs
@@ -10,16 +10,44 @@
     <table class="table table-striped table-sm" style="flex-basis: 80%;">
       <thead>
         <tr class="table-dark">
+          <th>Ảnh sản phẩm</th>
           <th>Tên sản phẩm</th>
+          <th>Size</th> <!-- Thêm cột mới -->
           <th>Số lượng</th>
+          <th>Trạng thái đơn hàng</th>
         </tr>
       </thead>
       <tbody>
         <% transactions.forEach(transaction => { %>
           <% transaction.cart.forEach(item => { %>
             <tr>
+              <td><img src="<%= item.products.image %>" alt="Ảnh sản phẩm" width="100" height="100"></td>
               <td><%= item.products.productName %></td>
+              <td>
+                <% item.products.size.forEach(size => { %>
+                  <%= size.sizeCode.sizeCode %>
+                <% }) %>
+              </td> <!-- Hiển thị size -->
               <td><%= item.soLuong %></td>
+              <td>
+                <% switch(transaction.trangThai) { 
+                  case 0: %>
+                    Đã hủy
+                    <% break; 
+                  case 1: %>
+                    Chờ xác nhận
+                    <% break; 
+                  case 2: %>
+                    Chờ lấy hàng
+                    <% break; 
+                  case 3: %>
+                    Đang giao
+                    <% break; 
+                  case 4: %>
+                    Đã giao
+                    <% break; 
+                } %>
+              </td>
             </tr>
           <% }) %>
         <% }) %>
