--- a/views/statistics/statistics.ejs
+++ b/views/statistics/statistics.ejs
@@ -1,12 +1,12 @@
 <%- include ('../inc/header') %>
 
-<h2 style="margin-left: 20px">Tổng Doanh thu</h2>
-<div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
+<h4 style="margin-left: 40px">Tổng Doanh thu</h4>
+<div style="width: 700px; height: 500px; display: flex; justify-content: space-between; align-items: center; margin-left: 100px;">
     <canvas id="totalRevenueChart"></canvas>
 </div>
 
-<h2 style="margin-left: 20px">Doanh Thu Theo Loại Sản Phẩm</h2>
-<div style="width: 1400px; height: 700px; display: flex; justify-content: center; align-items: center; margin-left: 200px;">
+<h4 style="margin-left: 40px">Doanh Thu Theo Loại Sản Phẩm</h4>
+<div style="width: 700px; height: 500px; display: flex; justify-content: space-between; align-items: center; margin-left: 100px;">
     <canvas id="productTypeRevenueChart"></canvas>
 </div>
 
