--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -80,6 +80,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/products">Quản lý Sản Phẩm</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/orders">Quản lý Đơn Hàng</a>
+        </li>
         <!-- Thêm các liên kết khác tại đây -->
       </ul>
       <ul class="navbar-nav logout-button">
