--- a/views/users/purchase-history.ejs
+++ b/views/users/purchase-history.ejs
@@ -12,6 +12,8 @@
         <tr class="table-dark">
           <th>Ảnh sản phẩm</th>
           <th>Tên sản phẩm</th>
+          <th>Size</th>
+          <th>Màu</th> <!-- Thêm cột mới -->
           <th>Số lượng</th>
           <th>Trạng thái đơn hàng</th>
         </tr>
@@ -20,8 +22,20 @@
         <% transactions.forEach(transaction => { %>
           <% transaction.cart.forEach(item => { %>
             <tr>
-              <td><img src="<%= item.products.image %>" alt="Ảnh sản phẩm" width="100" height="100"></td>
+              <td><img src="<%= item.products.image %>" alt="Ảnh sản phẩm" width="50" height="50"></td>
               <td><%= item.products.productName %></td>
+              <td>
+                <% item.products.size.forEach(size => { %>
+                  <%= size.sizeCode.sizeCode %>
+                <% }) %>
+              </td>
+              <td>
+                <% item.products.size.forEach(size => { %>
+                  <% size.color.forEach(color => { %>
+                    <%= color.colorCode.nameColor %>
+                  <% }) %>
+                <% }) %>
+              </td> <!-- Hiển thị màu -->
               <td><%= item.soLuong %></td>
               <td>
                 <% switch(transaction.trangThai) { 
