--- a/views/oder/order-management.ejs
+++ b/views/oder/order-management.ejs
@@ -1,4 +1,16 @@
 <%- include ('../inc/header') %>
+
+<% function getStatusText(status) {
+    switch(status) {
+        case 0: return 'Đã hủy';
+        case 1: return 'Chờ xác nhận';
+        case 2: return 'Chờ lấy hàng';
+        case 3: return 'Đang giao';
+        case 4: return 'Đã giao';
+        default: return 'Không xác định';
+    }
+} %>
+
 <div>
     <div style="display: flex;" class="alert alert-info">
         <div style="display: flex;">
@@ -55,8 +67,8 @@
                                         </div>
                                         <div style="display: flex;">
                                             <div style="max-width: 300px">Trạng thái:</div>
-                                            <label style="margin-left: 10px;">Đã thanh toán</label>
-                                        </div>
+                                            <label style="margin-left: 10px;"><%= getStatusText(transaction.trangThai) %></label>
+                                        </div>                                        
                                     </div>
                                     <div style="padding: 20px;">
                                         <table class="table table-striped table-sm" style="flex-basis: 80%;">
